--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,13 @@ cmake_minimum_required(VERSION 2.8.3)
 project(nord_houston)
 set(CMAKE_CXX_FLAGS "--std=c++11 ${CMAKE_CXX_FLAGS}")
 
+message(STATUS "Building SeqSel")
+execute_process(COMMAND ghc -O2 SeqSel/Parser.hs SeqSel/Printer.hs Main.hs -o Main -Wall
+                WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}/seqsel")
+message(STATUS "Transpiling behaviour trees")
+execute_process(COMMAND seqsel/Main data/WallFollow.ss src/seqsel/WallFollow.hpp
+                WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}")
+
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
