--- a/package.xml
+++ b/package.xml
@@ -19,10 +19,12 @@
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>nord_messages</build_depend>
+  <build_depend>roslib</build_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>nord_messages</run_depend>
+  <run_depend>roslib</run_depend>
 
 
   <export>
